--- a/.github/workflows/on-push-main.yml
+++ b/.github/workflows/on-push-main.yml
@@ -51,6 +51,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PENEKHUN_GITHUB_SECRET }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: Baekjoon-java-starter.zip
+          asset_path: ./Baekjoon-java-starter.zip
           asset_name: Baekjoon-java-starter.zip
           asset_content_type: application/zip
