--- a/.github/workflows/on-push-main.yml
+++ b/.github/workflows/on-push-main.yml
@@ -25,7 +25,7 @@ jobs:
         run: ./gradlew clean build
 
       - name: Zip JAR file
-        run: zip -r Baekjoon-java-starter.zip build/libs/*.jar
+        run: zip -r -j Baekjoon-java-starter.zip build/libs/*.jar
 
       - run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
         id: extract_version_name
