--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.17.1'
     implementation 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
-
+    
+    implementation 'org.slf4j:slf4j-api:1.7.32'
     testImplementation platform('org.junit:junit-bom:5.9.2')
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
