로그 관련 누락된 종속성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 
     // 로그
     implementation 'org.slf4j:slf4j-api:1.7.32'
+    implementation 'org.slf4j:slf4j-simple:1.7.32'
 
     // 테스팅
     testImplementation platform('org.junit:junit-bom:5.9.2')
