--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,18 @@ repositories {
 }
 
 dependencies {
+    // 웹 파서
     implementation 'org.jsoup:jsoup:1.17.1'
+
+    // 롬복
     implementation 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
+    // 로그
+    implementation 'org.slf4j:slf4j-api:1.7.32'
+    implementation 'org.slf4j:slf4j-simple:1.7.32'
+
+    // 테스팅
     testImplementation platform('org.junit:junit-bom:5.9.2')
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
