--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'org.slf4j:slf4j-simple:1.7.32'
 
+    // JSON 파싱
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+
     // 테스팅
     testImplementation platform('org.junit:junit-bom:5.9.2')
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
