feat: 최신 버전 확인 기능 추가 및 CI 워크플로 업데이트
- GitHub API에서 BojStarter의 최신 릴리스 버전을 가져오기 위해 GitHubReleaseFetcher를 구현했습니다.
- 버전 비교를 처리하기 위해 Version 및 VersionTag 클래스를 추가했습니다.
- 현재 버전이 최신 버전인지 확인할 수 있도록 메인 함수를 수정했습니다.
- 빌드 프로세스 중에 현재 버전 파일을 생성하도록 build.gradle를 수정했습니다.
- 배포시 커밋 메시지에서 버전을 추출하도록 GitHub 작업 워크플로우 업데이트했습니다. (기존에는 0.0.0만 파싱이 되었지만, 0.0.0-aaa 같은 버전 문자도 파싱되도록 변경)

--- a/.github/workflows/on-push-main.yml
+++ b/.github/workflows/on-push-main.yml
@@ -27,8 +27,18 @@ jobs:
       - name: Zip JAR file
         run: zip -r -j Baekjoon-java-starter.zip build/libs/*.jar
 
-      - run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
+      - name: Extract version from commit message
         id: extract_version_name
+        run: |
+          VERSION_REGEX="[0-9]+\.[0-9]+\.[0-9]+(-[A-Za-z0-9]+)?"
+          if [[ "${{ github.event.head_commit.message }}" =~ $VERSION_REGEX ]]; then
+            VERSION="${BASH_REMATCH[0]}"
+            echo "Version found: $VERSION"
+            echo "::set-output name=version::$VERSION"
+          else
+            echo "No version found in commit message."
+            exit 1
+          fi
 
       - name: Create Release
         id: create_release
