chore: deployMode로 빌드할때 버전정보가 때때로 갱신되지 않는 문제 해결

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ jar {
 task generateSources {
     def outputDir = file("$buildDir/../src/main/java/version")
     outputs.dir outputDir
+    outputs.upToDateWhen { false }
+
     doFirst {
         if (!outputDir.exists()) {
             outputDir.mkdirs()
@@ -80,6 +82,7 @@ task generateSources {
             }
         }
         """
+
         new File(outputDir, "CurrentVersion.java").withWriter('UTF-8') { writer ->
             writer.write(versionClassContent)
         }
